[package]
name = "miho"
version = "5.3.0"
description = "Repository management tools"
homepage = "https://github.com/ferreira-tb/miho"
repository = "https://github.com/ferreira-tb/miho"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.80"
keywords = ["miho", "repository", "git"]
categories = ["development-tools"]

[lints.rust]
async_fn_in_trait = "allow"

[lints.clippy]
clone_on_ref_ptr = "deny"
filetype_is_file = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_for_each = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
similar_names = "allow"
struct_excessive_bools = "allow"

[lints.clippy.pedantic]
level = "deny"
priority = -1

[dependencies]
anyhow = "1.0"
colored = "2.1"
crossterm = "0.28"
future-iter = "0.1"
futures = "0.3"
globset = "0.4"
ignore = "0.4"
inquire = "0.7"
itertools = "0.13"
semver = "1.0"
taplo = "0.13"

[dependencies.ahash]
version = "0.8"
features = ["serde"]

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.reqwest]
version = "0.12"
features = ["brotli", "gzip", "json", "rustls-tls"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies.strum]
version = "0.26"
features = ["derive"]

[dependencies.tabled]
version = "0.16"
features = ["ansi"]

[dependencies.tracing]
version = "0.1"
optional = true
features = ["release_max_level_off"]

[dependencies.tracing-subscriber]
version = "0.3"
optional = true
features = ["chrono", "env-filter", "fmt", "parking_lot", "registry"]

[dependencies.tokio]
version = "1.39"
features = ["full"]

[dependencies.toml]
version = "0.8"
features = ["preserve_order"]

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
