[package]
name = "miho"
version = "5.0.8"
description = "Repository management tools"
homepage = "https://github.com/ferreira-tb/miho"
repository = "https://github.com/ferreira-tb/miho"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
readme = "../README.md"
edition = "2021"
rust-version = "1.78"
keywords = ["miho", "repository"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
colored = "2.1.0"
crossterm = "0.27.0"
futures = "0.3.30"
globset = "0.4.14"
ignore = "0.4.22"
inquire = "0.7.5"
itertools = "0.12.1"
rayon = "1.10.0"
semver = "1.0.23"
taplo = "0.13.0"
thiserror = "1.0.61"

[dependencies.clap]
version = "4.5.6"
features = ["derive"]

[dependencies.hashbrown]
version = "0.14.5"
features = ["serde"]

[dependencies.reqwest]
version = "0.12.4"
features = ["brotli", "gzip", "json", "rustls-tls"]

[dependencies.serde]
version = "1.0.203"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.117"
features = ["preserve_order"]

[dependencies.strum]
version = "0.26.2"
features = ["derive"]

[dependencies.tabled]
version = "0.15.0"
features = ["ansi"]

[dependencies.tokio]
version = "1.38.0"
features = ["full"]

[dependencies.toml]
version = "0.8.14"
features = ["preserve_order"]

[dependencies.miho_derive]
version = "5.0"
path = "../miho_derive"
