[package]
name = "miho"
version = "5.2.0"
description = "Repository management tools"
homepage = "https://github.com/ferreira-tb/miho"
repository = "https://github.com/ferreira-tb/miho"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
readme = "../README.md"
edition = "2021"
rust-version = "1.80"
keywords = ["miho", "repository", "git"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0.86"
colored = "2.1.0"
crossterm = "0.27.0"
future-iter = "0.1.4"
futures = "0.3.30"
globset = "0.4.14"
ignore = "0.4.22"
inquire = "0.7.5"
itertools = "0.13.0"
semver = "1.0.23"
taplo = "0.13.0"
thiserror = "1.0.63"

[dependencies.ahash]
version = "0.8.11"
features = ["serde"]

[dependencies.clap]
version = "4.5.11"
features = ["derive"]

[dependencies.reqwest]
version = "0.12.5"
features = ["brotli", "gzip", "json", "rustls-tls"]

[dependencies.serde]
version = "1.0.204"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.121"
features = ["preserve_order"]

[dependencies.strum]
version = "0.26.3"
features = ["derive"]

[dependencies.tabled]
version = "0.15.0"
features = ["ansi"]

[dependencies.tracing]
version = "0.1.40"
features = ["release_max_level_off"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["chrono", "env-filter", "fmt", "parking_lot", "registry"]

[dependencies.tokio]
version = "1.39.2"
features = ["full"]

[dependencies.toml]
version = "0.8.16"
features = ["preserve_order"]

[dependencies.miho_derive]
version = "5.2"
path = "../miho_derive"
