[package]
name = "miho_derive"
version = "5.1.1"
description = "Repository management tools"
homepage = "https://github.com/ferreira-tb/miho"
repository = "https://github.com/ferreira-tb/miho"
authors = ["Andrew Ferreira <andrew.shien2@gmail.com>"]
license = "MIT"
readme = "../README.md"
edition = "2021"
rust-version = "1.79"
keywords = ["miho", "repository"]
categories = ["development-tools"]

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
quote = "1.0.36"
syn = "2.0.72"
proc-macro2 = "1.0.86"
