[package]
name = "cargo-toml"
version = "2.4.7"

[dependencies]
semver = "1.0.22"
thiserror = "1.0.58"

[dependencies.miho_derive]
path = "../miho_derive"

[dependencies.clap]
version = "4.5.3"
features = ["derive"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.miho]
version = "4.0"
path = "../miho"
