[package]
name = "cargo-toml"
version = "3.0.1"
keywords = ["test", "test2", "test3", "test4", "test5"]

[dependencies]
semver = "1.0.22"
thiserror = "1.0.58"

[dependencies.miho_derive]
path = "../miho_derive"

[dependencies.clap]
version = "4.5.0"
features = ["derive"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.miho]
version = "4.0"
path = "../miho"
