[package]
name = "tests"
version = "4.0.0"
publish = false

[package.homepage]
workspace = true

[package.repository]
workspace = true

[package.authors]
workspace = true

[package.license]
workspace = true

[package.edition]
workspace = true

[package.readme]
workspace = true

[lib]
path = "lib.rs"

[dependencies.miho]
version = "4.0"
path = "../miho"

[[test]]
name = "integration_tests"
path = "integration_tests.rs"
